--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "2cddef2c-40ba-40c2-896c-810b6c0df7e8"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
